--- a/charset/src/app/app.component.html
+++ b/charset/src/app/app.component.html
@@ -12,7 +12,7 @@
           </ng-template>
           <li routerLinkActive="active"><a routerLink="/solucionadores"><b>Solucionadores</b></a></li>
           <li routerLinkActive="active"><a routerLink="/demandantes"><b>Demandantes</b></a></li>
-          <li (click)="reInitMaterialize()" *ngIf="authService.user | async"><i id="dropdown-user" class='material-icons dropdown-trigger btn'
+          <li (click)="reInitMaterialize()" *ngIf="user"><i id="dropdown-user" class='material-icons dropdown-trigger btn'
               data-target='dropdown1'>account_circle</i></li>
 
           <ul id='dropdown1' class='teal accent-4 dropdown-content'>
