--- a/charset/src/app/home/home.component.html
+++ b/charset/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-6 ">
                 <div class="row">
                     <div class="col s12 m6">
-                        <div *ngIf="!(authService.user | async)" class="card blue-grey darken-1">
+                        <div *ngIf="!user" class="card blue-grey darken-1">
                             <div class="card-content white-text">
                                 <span class="card-title">Login</span>
                                 <form (keyup.enter)="login()">
