--- a/charset/src/app/cadastro/cadastro.component.html
+++ b/charset/src/app/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <h4 class="blue-grey-text text-darken-1"><b>Cadastro de novo usuário</b></h4>
-  <div class="row">
+<div class="uk-section">
+  <div class="uk-container">
+    <h2 class="cadastro-title"><b>Cadastro de novo usuário</b></h2>
     <form id="cadastroForm" class="col s12">
       <div class="row">
         <div class="input-field col s6">
