--- a/charset/src/app/home/home.component.html
+++ b/charset/src/app/home/home.component.html
@@ -1,38 +1,42 @@
-<div class="section img-home">
-    <div class="container" style="padding-top: 50px;">
-        <div class="row">
-            <div class="col-md-6 ">
-                <div class="row">
-                    <div class="col s12 m6">
-                        <div *ngIf="!user" class="card blue-grey darken-1">
-                            <div class="card-content white-text">
-                                <span class="card-title">Login</span>
-                                <form (keyup.enter)="login()">
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <i style="color:white;" class="material-icons prefix">account_circle</i>
-                                            <input id="user" type="text" name="email" class="validate" [(ngModel)]="email">
-                                            <label for="user">Email</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <i style="color:white;" class="material-icons prefix">lock</i>
-                                            <input id="senha" type="password" name="password" class="validate" [(ngModel)]="password">
-                                            <label for="senha">Senha</label>
-                                        </div>
-                                    </div>
-                                    <div><a (click)="forgotPassword()" style="cursor: pointer" >Esqueceu sua senha?</a></div>
-                                </form>
-                            </div>
-                            <div class="card-action" align="center">
-                                <a style="margin-right: 20%" class="entrar waves-effect waves-light btn" (click)="login()">Entrar</a>
-                                <a class="cadastrar waves-effect waves-light btn" routerLink="/cadastro">Cadastre-se</a>
+<div class="uk-section img-home">
+    <div class="uk-container">
+        <div class="uk-child-width-1-2@s uk-flex uk-flex-center" uk-grid>
+            <div>
+                <div class="uk-card uk-card-default uk-card-large uk-card-body ">
+                    <h3 align="center" class="uk-card-title title-login">Login</h3>
+                    <form (keyup.enter)="login()">
+
+                        <div class="uk-margin">
+                            <div class="uk-inline uk-width-1-1">
+                                <span class="uk-form-icon" uk-icon="icon: user"></span>
+                                <input class="uk-input" type="text" name="email" [(ngModel)]="email">
                             </div>
                         </div>
+
+                        <div class="uk-margin">
+                            <div class="uk-inline uk-width-1-1">
+                                <span class="uk-form-icon" uk-icon="icon: lock"></span>
+                                <input class="uk-input" type="password" name="senha" [(ngModel)]="password">
+                            </div>
+                        </div>
+
+                    </form>
+                    <div class="uk-flex uk-flex-center">
+                        <div>
+                            <button class="uk-button uk-button-primary entrar" (click)="login()">Entrar</button>
+                        </div>
                     </div>
+                    <br>
+                    <div class="uk-flex uk-flex-between">
+                        <div><a class="uk-button uk-button-text" href="" routerLink="/cadastro">Cadastrar-se</a></div>
+                        <div><button class="uk-button uk-button-text" (click)="forgotPassword()">Recuperar
+                                senha</button></div>
+                    </div>
+
                 </div>
             </div>
         </div>
+
+
     </div>
 </div>
