--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="uk-section">
   <hr class="uk-divider-icon">
   <div class="uk-container">
-    <div class="uk-flex uk-flex-around">
+    <div class="uk-flex uk-flex-around uk-flex-middle">
       <div>
         <a href="http://www.inf.ufg.br" target="_blank">
           <img src="assets/images/logoinf.png" style="max-width:12rem">
@@ -9,7 +9,7 @@
       </div>
       <div>
         <a href="http://apoema.inf.ufg.br" target="_blank">
-          <img src="assets/images/logoapoema.png" style="max-width:12rem">
+          <img src="assets/images/logoapoema.png" style="max-width:15rem">
         </a>
       </div>
     </div>
