--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,7 @@
 }
 
 .entrar {
-    background-color: #39f;
+    background-color: #01579b;
 }
 
 .cadastrar {
@@ -21,7 +21,7 @@
 }
 
 .title-login {
-    color: #39f;
+    color: #01579b;
     font-size: 3vw;
 }
 
