--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,2 +1,7 @@
 //Colors
 $color-navbar: #01579b;
+$color-white: white;
+$notify-success: #32d296;
+$notify-danger: crimson;
+$notify-warning: orange;
+$bg-item-nav: #fffafa;
