passando id no user

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
 
     <ul class="uk-navbar-nav">
       <li>
-        <a href="" uk-icon="icon: user"></a>
+        <a id="icon-user" href="" uk-icon="icon: user"></a>
         <div class="uk-navbar-dropdown">
           <ul class="uk-nav uk-navbar-dropdown-nav">
             <li><a href="#" routerLink="/minha-conta">Minha Conta</a></li>
