--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -5,3 +5,8 @@ $notify-success: #32d296;
 $notify-danger: crimson;
 $notify-warning: orange;
 $bg-item-nav: #fffafa;
+
+//Reponsividade
+$tablet: "(min-width: 768px) and (max-width: 1023px)";
+$desktop: "(min-width: 1024px)";
+$mobile: "(max-width: 767px)";
