--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -1,6 +1,11 @@
 @mixin centralizar {
-    margin: { 
-        left: auto;
-        right: auto;
-    }
+  margin: {
+    left: auto;
+    right: auto;
+  }
+}
+
+@mixin estilo-notify {
+  font-size: 1em;
+  color: $color-white;
 }
