--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $color-white: white;
 $notify-success: #32d296;
 $notify-danger: crimson;
 $notify-warning: orange;
+$notify-primary: #39f;
 $bg-item-nav: #fffafa;
 
 //Reponsividade
