--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
     </ul>
 
   </div>
-  <div *ngIf="logado" class="uk-navbar-right">
+  <div *ngIf="authService.userObservable | async" class="uk-navbar-right">
 
     <ul class="uk-navbar-nav">
       <li>
