--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -6,6 +6,7 @@ $notify-danger: crimson;
 $notify-warning: orange;
 $notify-primary: #39f;
 $bg-item-nav: #fffafa;
+$color-text-footer: #fffafa;
 
 //Reponsividade
 $tablet: "(min-width: 768px) and (max-width: 1023px)";
