--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
 <div class="uk-section">
   <hr class="uk-divider-icon">
   <div class="uk-container">
-    <div class="uk-flex uk-flex-around uk-flex-middle">
-      <div>
+    <div class="uk-child-width-1-2@m uk-child-width-1-1@s" uk-grid>
+      <div class="uk-flex uk-flex-center uk-flex-middle ">
         <a href="http://www.inf.ufg.br" target="_blank">
           <img src="assets/images/logoinf.png" style="max-width:12rem">
         </a>
       </div>
-      <div>
+      <div class="uk-flex uk-flex-center uk-flex-middle ">
         <a href="http://apoema.inf.ufg.br" target="_blank">
           <img src="assets/images/logoapoema.png" style="max-width:15rem">
         </a>
@@ -18,15 +18,15 @@
 
 <footer class="page-footer">
   <div class="uk-container" uk-grid>
-    <div class="uk-width-1-2 uk-flex uk-flex-middle uk-text-center uk-margin">
+    <div class="uk-width-1-2@m uk-width-1-1@s uk-flex uk-flex-middle uk-text-center uk-margin">
       <div class="uk-child-width-1-1 uk-flex uk-flex-middle uk-flex-center" uk-grid>
         <img class="uk-margin-top" src="assets/images/logo-charset.png" style="width: 100px;">
-        <p class="grey-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
+        <p class="white-text">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2°
           Andar, Sala 244 - APOEMA</p>
       </div>
 
     </div>
-    <div class="uk-width-1-4 uk-flex uk-flex-center uk-margin">
+    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
       <div>
         <h5 class="white-text">Parceiros</h5>
         <ul class="uk-list">
@@ -36,7 +36,7 @@
       </div>
 
     </div>
-    <div class="uk-width-1-4 uk-flex uk-flex-center uk-margin">
+    <div class="uk-width-1-4@m uk-width-1-1@s uk-flex uk-flex-center uk-margin">
       <div>
         <h5 class="white-text">Contato</h5>
         <ul class="uk-list">
