--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,7 +120,7 @@ body {
 .white-text {
   color: $color-white;
   font-weight: bold;
-  font-size: 1.5vw;
+  font-size: 1.1em;
 }
 
 .cadastro-title {
@@ -128,8 +128,21 @@ body {
   font-size: 1.5em;
 }
 
+.row-btn-toggle {
+  margin: 0;
+  background-color: $color-navbar;
+}
+
+.btn-toggle {
+  border: none;
+}
+
 @media screen and (max-width: 500px) {
   .merge div {
     margin-right: 13px;
   }
+}
+
+.uk-list li {
+  color: $color-text-footer;
 }
