--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="uk-section">
   <div class="uk-container">
-    <h2 class="cadastro-title"><b>Cadastro de novo usuário</b></h2>
+    <h2 class="ap-title"><b>Cadastro de novo usuário</b></h2>
 
     <form  id="cadastroForm">
       <div class="uk-child-width-1-2@m uk-child-width-1-1@s merge" uk-grid>
