--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
       color: $color-navbar !important;
     }
   }
-  
+
 }
 
 .active {
@@ -87,7 +87,7 @@ body {
   font-size: 1.5vw;
 }
 
-.cadastro-title {
+.ap-title {
   color: #007fa3;
   font-size: 1.5em;
 }
