--- a/src/app/desafios/desafios.component.html
+++ b/src/app/desafios/desafios.component.html
@@ -1,3 +1,238 @@
+<div class="uk-section">
+  <div class="uk-container">
+    <h2 class="ap-title"><b>Desafios</b></h2>
+
+    <form id="desafiosForm">
+      <div uk-grid>
+        <div class="uk-width-1-2">
+
+          <a class="uk-button uk-button-default" href="" uk-toggle="target: #modal-criar-novo" *ngIf="user.profile !== 'Solucionador'"><span
+              class="uk-margin-right" uk-icon="icon: plus"></span>
+            Criar Novo</a>
+
+          <div class="uk-inline">
+            <button class="uk-button uk-button-default" type="button" uk-icon="icon: triangle-down">Área</button>
+            <div uk-dropdown>
+              <ul class="uk-nav uk-dropdown-nav">
+                <li *ngFor="let area of areaoptions | async"><a (click)="setArea(area.nome)">{{area.nome}}</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="uk-inline">
+            <button class="uk-button uk-button-default" type="button" uk-icon="icon: triangle-down">Ver</button>
+            <div uk-dropdown>
+              <ul class="uk-nav uk-dropdown-nav">
+                <li *ngIf="user.profile !== 'Solucionador'" class="uk-active"><a (click)="setUserEmail()"><i class="fas fa-user uk-margin-right"></i>Meus
+                    Desafios</a></li>
+                <li (click)="cleanFilters()" class="uk-active"><a (click)="setUserEmail()"><i class="fas fa-infinity uk-margin-right"></i>Todos
+                    os Desafios</a></li>
+                <li class="uk-active"><a (click)="setStatus('concluído')"><i class="fas fa-check uk-margin-right"></i>Desafios
+                    Concluídos</a></li>
+                <li class="uk-active"><a (click)="setStatus('submissão')"><i class="fas fa-file-download uk-margin-right"></i>Desafios
+                    Submissão</a></li>
+                <li class="uk-active"><a (click)="setStatus('release')"><i class="fas fa-location-arrow uk-margin-right"></i>Desafios
+                    Release</a></li>
+                <li class="uk-active"><a (click)="setRemunerado()"><i class="fas fa-dollar-sign uk-margin-right"></i>Desafios
+                    Remunerados</a></li>
+                <li *ngIf="user.profile != 'Demandante'" class="uk-active"><a (click)="setSolucoesFilter()"><i class="far fa-lightbulb uk-margin-right"></i>Minhas
+                    soluções</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div>
+
+          <div class="uk-margin">
+            <form class="uk-search uk-search-default uk-width-large">
+              <span class="uk-search-icon-flip" uk-search-icon></span>
+              <input [(ngModel)]="search" class="uk-search-input" type="search" placeholder="Pesquisar">
+            </form>
+          </div>
+        </div>
+
+
+        <ul class="collapsible popout">
+          <ng-container *ngFor="let desafio of desafios | async | filterBy: ['emaildemandante']: userEmail | filterBy: ['status']: status
+            | filterBy: ['status', 'nome', 'demandante', 'resumo', 'area']: search | filterBy: ['area']: area | filterBy: ['remunerado']: remunerado">
+            <li *ngIf="!solucoesFilter">
+              <div [ngClass]="{'green lighten-1 white-text': desafio.status == 'concluído'}" (click)="reInitMaterialize()"
+                class="collapsible-header">
+                <i *ngIf="desafio.status == 'concluído'" style="margin-right:20px" class="tiny material-icons white-text">done</i>
+                {{desafio.nome}}
+
+                <div class="row"></div>
+                <span><i [ngClass]="{'white-text': desafio.status == 'concluído'}" class="red-text material-icons">access_time</i></span>Prazo
+                para Submissão
+                {{desafio.prazo.toDate().toLocaleDateString('pt-BR')}} às
+                {{desafio.prazo.toDate().toLocaleTimeString('pt-BR')}}
+              </div>
+              <div style="position: relative" class="collapsible-body">
+                <a style="margin-right:20px" (click)="findOne(desafio.id)" *ngIf="desafio.emaildemandante === user.email && desafio.status != 'concluído'"
+                  class="btn-floating btn-small waves-effect waves-light blue modal-trigger" href="#modalEdit"><i class="material-icons">edit</i></a>
+                <a (click)="findOne(desafio.id)" *ngIf="desafio.emaildemandante === user.email" style="margin-right:20px"
+                  class="btn-floating btn-small waves-effect waves-light red modal-trigger" href="#modalDelete"><i
+                    class="tiny material-icons">delete</i></a>
+                <a (click)="findOne(desafio.id)" *ngIf="desafio.emaildemandante === user.email && desafio.status != 'concluído'"
+                  class="btn-floating btn-small waves-effect waves-light green modal-trigger" href="#modalComplete"><i
+                    class="tiny material-icons">done</i></a>
+
+                <p><b class="blue-text text-darken-3">Demandante:</b> {{desafio.demandante}}</p>
+                <p><b class="blue-text text-darken-3">Email do Demandante:</b> {{desafio.emaildemandante}}</p>
+                <p><b class="blue-text text-darken-3">Área do problema:</b> {{desafio.area}}</p>
+                <p><b class="blue-text text-darken-3">Resumo:</b> {{desafio.resumo}}</p>
+                <p><b class="blue-text text-darken-3">Remuneração:</b> {{desafio.remunerado}}</p>
+
+                <a (click)="getDesafioId(desafio.id)" style="position: absolute; right:10px; bottom:10px;" *ngIf="desafio.emaildemandante !== user.email && desafio.status != 'concluído' && user.profile != 'Demandante' && !(solucoesArray.includes(desafio.id))"
+                  class="waves-effect waves-light btn modal-trigger light-blue darken-2" href="#modalSolver"><i class="material-icons left">send</i>Solucionar</a>
+                <a (click)="findOneSolver(desafio.id)" style="position: absolute; right:10px; bottom:10px;" *ngIf="desafio.emaildemandante !== user.email && user.profile != 'Demandante' && solucoesArray.includes(desafio.id)"
+                  class="waves-effect waves-light btn modal-trigger yellow darken-3" href="#modalSeeSolver"><i class="material-icons left">remove_red_eye</i>Ver
+                  Sua Solução</a>
+
+                <ul class="collapsible">
+                  <ng-container *ngFor="let solucao of solucoes | async">
+                    <li *ngIf="desafio.id == solucao.idDesafio && desafio.emaildemandante == user.email">
+                      <div class="collapsible-header amber lighten-2"><i class="material-icons">lightbulb_outline</i>Solução
+                        do
+                        {{solucao.solver}} - {{solucao.emailsolver}}</div>
+                      <div class="collapsible-body">
+                        <p><b class="blue-text text-darken-3">Enviado em:</b>
+                          {{solucao.sendAt.toDate().toLocaleDateString('pt-BR')}} às
+                          {{solucao.sendAt.toDate().toLocaleTimeString('pt-BR')}}</p>
+                        {{solucao.resumo}}
+                      </div>
+                    </li>
+                  </ng-container>
+                </ul>
+
+              </div>
+            </li>
+          </ng-container>
+        </ul>
+
+        <div>
+          <ul uk-accordion="collapsible: false">
+            <li>
+              <a class="uk-accordion-title" href="#">Item 1</a>
+              <div class="uk-accordion-content">
+                <a href="" class="uk-icon-button uk-margin-right" uk-icon="pencil" title="Editar Desafio" uk-toggle="target: #modal-criar-novo"></a>
+                <a href="" class="uk-icon-button uk-margin-right" uk-icon="trash" uk-toggle="target: #modal-deletar-desafio"
+                  title="Deletar Desafio"></a>
+                <a href="" class="uk-icon-button uk-margin-right" uk-icon="check" title="Concluir Desafio" uk-toggle="target: #modal-concluir-desafio"></a>
+
+                <p><b>Demandante:</b>{{desafio.demandante}}</p>
+                <p><b>Email do Demandante:</b>{{desafio.emaildemandante}}</p>
+                <p><b>Área do problema:</b>{{desafio.area}}</p>
+                <p><b>Resumo:</b>{{desafio.resumo}}</p>
+                <p><b>Remuneração:</b>{{desafio.remunerado}}</p>
+
+                <a (click)="getDesafioId(desafio.id)" style="position: absolute; right:10px; bottom:10px;" *ngIf="desafio.emaildemandante !== user.email && desafio.status != 'concluído' && user.profile != 'Demandante' && !(solucoesArray.includes(desafio.id))"
+                  class="waves-effect waves-light btn modal-trigger light-blue darken-2" href="#modalSolver"><i>send</i>Solucionar</a>
+                <a (click)="findOneSolver(desafio.id)" style="position: absolute; right:10px; bottom:10px;" *ngIf="desafio.emaildemandante !== user.email && user.profile != 'Demandante' && solucoesArray.includes(desafio.id)"
+                  class="waves-effect waves-light btn modal-trigger yellow darken-3" href="#modalSeeSolver"><i>remove_red_eye</i>Ver
+                  Sua Solução</a>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </form>
+  </div>
+</div>
+
+<!--Modal Criar Novo Desafio-->
+<div id="modal-criar-novo" uk-modal>
+  <div style="width: 800px;" class="uk-modal-dialog uk-modal-body">
+    <button class="uk-modal-close-default" type="button" uk-close></button>
+    <h2 class="uk-modal-title ap-title">Criar Novo Desafio</h2>
+
+    <div uk-grid>
+      <div class="uk-width-1-1">
+        <input class="uk-input" type="text" placeholder="Nome do Desafio">
+      </div>
+      <div class="uk-width-1-3">
+        <input class="uk-input" type="text" placeholder="Área do Desafio">
+      </div>
+      <div class="uk-width-1-3">
+        <input class="uk-input" type="date" placeholder="Prazo do Desafio (Data)">
+      </div>
+      <div class="uk-width-1-3">
+        <input class="uk-input" type="date" placeholder="Prazo do Desafio (Hora)">
+      </div>
+
+      <div>
+        <p>
+          <label>
+            <input class="uk-radio uk-margin-right" value="Sim" name="remunerado" type="radio" />
+            <span>Remunerado</span>
+          </label>
+        </p>
+        <p>
+          <label>
+            <input class="uk-radio uk-margin-right" value="Não" name="remunerado" type="radio" checked />
+            <span>Não Remunerado</span>
+          </label>
+        </p>
+      </div>
+
+      <div class="uk-width-1-1">
+        <textarea id="resumo" class="uk-textarea" name="resumo" required="" aria-required="true" placeholder="Resumo do Desafio"></textarea>
+      </div>
+
+    </div>
+
+    <div class="uk-flex uk-flex-right uk-margin-top">
+      <div>
+        <button class="uk-button uk-button-primary uk-margin-right" type="button">Criar Desafio</button>
+        <button class="uk-button uk-button-default uk-modal-close" type="button">Cancelar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!--Modal Deletar Desafio-->
+<div id="modal-deletar-desafio" uk-modal>
+  <div class="uk-modal-dialog">
+    <button class="uk-modal-close-default" type="button" uk-close></button>
+
+    <div class="uk-modal-header">
+      <h2 class="uk-modal-title ap-title">Confirmação</h2>
+    </div>
+    <div class="uk-modal-body">
+      <p>Tem certeza que deseja excluir este desafio?. Todos os dados referentes a ele serão perdidos.</p>
+    </div>
+
+    <div class="uk-modal-footer uk-text-right">
+      <button class="uk-button uk-button-primary uk-margin-right" type="button">Deletar Desafio</button>
+      <button class="uk-button uk-button-default uk-modal-close" type="button">Cancelar</button>
+    </div>
+
+  </div>
+</div>
+
+<!--Modal Concluir Desafio-->
+<div id="modal-concluir-desafio" uk-modal>
+  <div class="uk-modal-dialog">
+    <button class="uk-modal-close-default" type="button" uk-close></button>
+
+    <div class="uk-modal-header">
+      <h2 class="uk-modal-title ap-title">Confirmação</h2>
+    </div>
+    <div class="uk-modal-body">
+      <p>Tem certeza que deseja marcar este desafio como concluído? Não será mais possível receber soluções para ele.</p>
+    </div>
+
+    <div class="uk-modal-footer uk-text-right">
+      <button class="uk-button uk-button-primary uk-margin-right" type="button">Confirmar Conclusão</button>
+      <button class="uk-button uk-button-default uk-modal-close" type="button">Cancelar</button>
+    </div>
+
+  </div>
+</div>
+
 <div class="container">
   <div style="margin-bottom: 0" class="row">
     <h4 class="font-bold blue-text text-darken-3">Desafios
@@ -136,8 +371,6 @@
       </li>
     </ng-container>
   </ul>
-
-
 </div>
 
 <!-- Modal Create Desafio -->
