--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div uk-sticky>
+<div uk-sticky="animation: uk-animation-scale-up; top:100">
   <nav class="uk-navbar-container navbar  uk-visible@m" uk-navbar>
     <div class="uk-navbar-left">
 
